fix: overflow covering border

--- a/src/ui/src/components/visualizer/expandable_info_text.scss
+++ b/src/ui/src/components/visualizer/expandable_info_text.scss
@@ -172,6 +172,7 @@
     position: relative;
     border: solid thin #00639b;
     border-radius: 4px;
+    overflow: hidden;
     font-size: 10px;
     width: calc(100% - 12px);
     height: 14px;
